Fixed footer issue & made .content-wrap a flexbox

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,17 @@
 }
 
 body {
-    height: 100%;
+    min-height: 100%;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
 .content-wrap {
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2% 0;
+  text-align: left;
 }
 
 .content-body {
@@ -66,4 +71,20 @@ th {
     color: #fff;
     background-color: #343a40;
     border-color: #343a40;
+}
+
+@media only screen and (min-height: 725px) {
+  footer-component {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+}
+
+@media only screen and (min-height: 560px) {
+  .specific-footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
 }
